# adv2021

./: .gitignore  Cargo.toml
resources/: input10.txt
src/: lib.rs
