[package]
name = "adv2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ansi_term = "0.12"
crossterm = "0.23"
itertools = "0.10"
nom = "7.1"
nom-supreme = "0.7.0"
num = "0.4"
petgraph = "0.6"
regex = "1"
rayon = "1"
indicatif = "0.16"